[package]
name = "readln"
version = "0.1.0"
edition = "2021"

[lib]
name = "readln"
path = "src/lib.rs"

[[bin]]
name = "readln-bin"
path = "src/bin.rs"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_UI_Input_KeyboardAndMouse",
]
